--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ before_script:
   - rm -rf .terraform
   - terraform --version
   - terraform init
+  - az login --tenant $ARM_TENANT_ID -u $AZ_USERNAME -p $AZ_PASSWORD
  
 stages:
   - validate
