--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -5,7 +5,7 @@ on: [push]
 env:
   AZURE_WEBAPP_NAME: "SDV-Gaming"    # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
-  NUGET_VERSION: '5.3.x'           # set this to the dot net version to use
+  NUGET_VERSION: '6.0'           # set this to the dot net version to use
 
 jobs:
   build-and-deploy:
