--- a/WebProjectAzure/appsettings.json
+++ b/WebProjectAzure/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebProjectAzure-C89B23BA-282A-4B4D-BF45-E0194CB8BFBE;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "AzureConnection": ""
+    "AzureConnection": "Server=tcp:serveurazuredb.database.windows.net,1433;Initial Catalog=mssql_db;Persist Security Info=False;User ID=maxime;Password=Test123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
