--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -10,6 +10,7 @@ env:
 jobs:
   build-and-deploy:
     runs-on: windows-latest
+    environment: dev
     steps:
 
     - uses: actions/checkout@main  
